--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "clsx": "^2.1.1",
+    "force": "^0.0.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
