--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "clsx": "^2.1.1",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "force": "^0.0.3",
     "next": "14.2.3",
     "react": "^18",
