--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@types/qs": "^6.9.15",
     "clsx": "^2.1.1",
     "daisyui": "^4.0.5",
     "force": "^0.0.3",
